parser.output
Terminals unused in grammar

    "..."
    AUTO
    BREAK
    CASE
    CHAR
    CONST
    CONTINUE
    DEFAULT
    DO
    DOUBLE
    ELSE
    ENUM
    EXTERN
    FLOAT
    FOR
    GOTO
    IF
    INLINE
    INT
    LONG
    REGISTER
    RESTRICT
    RETURN
    SHORT
    SIGNED
    STATIC
    STRUCT
    SWITCH
    TYPEDEF
    UNION
    UNSIGNED
    VOID
    VOLATILE
    WHILE
    _BOOL
    _COMPLEX
    _IMAGINARY
    FUNCTION_CALL


Grammar

    0 $accept: statement_sequence $end

    1 statement_sequence: statement
    2                   | statement_sequence statement

    3 statement: expr_list ';'

    4 expr_list: ε
    5          | expr
    6          | expr_list ',' expr

    7 expr: IDENT
    8     | CHARLIT
    9     | STRINGLIT
   10     | NUMBERLIT
   11     | '(' expr ')'
   12     | expr '=' expr
   13     | expr "+=" expr
   14     | expr "-=" expr
   15     | expr "*=" expr
   16     | expr "/=" expr
   17     | expr "%=" expr
   18     | expr "<<=" expr
   19     | expr ">>=" expr
   20     | expr "&=" expr
   21     | expr "^=" expr
   22     | expr "|=" expr
   23     | expr '?' expr_list ':' expr
   24     | expr "&&" expr
   25     | expr "||" expr
   26     | expr '&' expr
   27     | expr '^' expr
   28     | expr '|' expr
   29     | expr "==" expr
   30     | expr "!=" expr
   31     | expr '<' expr
   32     | expr "<=" expr
   33     | expr '>' expr
   34     | expr ">=" expr
   35     | expr "<<" expr
   36     | expr ">>" expr
   37     | expr '+' expr
   38     | expr '-' expr
   39     | expr '*' expr
   40     | expr '/' expr
   41     | expr '%' expr
   42     | "++" expr
   43     | "--" expr
   44     | '+' expr
   45     | '-' expr
   46     | '!' expr
   47     | '~' expr
   48     | '*' expr
   49     | '&' expr
   50     | SIZEOF expr
   51     | ALIGNOF expr
   52     | expr "++"
   53     | expr "--"
   54     | expr '(' expr_list ')'
   55     | expr '[' expr ']'
   56     | expr '.' expr
   57     | expr "->" expr


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 46
    '%' (37) 41
    '&' (38) 26 49
    '(' (40) 11 54
    ')' (41) 11 54
    '*' (42) 39 48
    '+' (43) 37 44
    ',' (44) 6
    '-' (45) 38 45
    '.' (46) 56
    '/' (47) 40
    ':' (58) 23
    ';' (59) 3
    '<' (60) 31
    '=' (61) 12
    '>' (62) 33
    '?' (63) 23
    '[' (91) 55
    ']' (93) 55
    '^' (94) 27
    '|' (124) 28
    '~' (126) 47
    error (256)
    IDENT <string> (258) 7
    CHARLIT <string> (259) 8
    STRINGLIT <string> (260) 9
    NUMBERLIT <number> (261) 10
    "->" (262) 57
    "++" (263) 42 52
    "--" (264) 43 53
    "<<" (265) 35
    ">>" (266) 36
    "<=" (267) 32
    ">=" (268) 34
    "==" (269) 29
    "!=" (270) 30
    "&&" (271) 24
    "||" (272) 25
    "..." (273)
    "*=" (274) 15
    "/=" (275) 16
    "%=" (276) 17
    "+=" (277) 13
    "-=" (278) 14
    "<<=" (279) 18
    ">>=" (280) 19
    "&=" (281) 20
    "|=" (282) 22
    "^=" (283) 21
    AUTO (284)
    ALIGNOF (285) 51
    BREAK (286)
    CASE (287)
    CHAR (288)
    CONST (289)
    CONTINUE (290)
    DEFAULT (291)
    DO (292)
    DOUBLE (293)
    ELSE (294)
    ENUM (295)
    EXTERN (296)
    FLOAT (297)
    FOR (298)
    GOTO (299)
    IF (300)
    INLINE (301)
    INT (302)
    LONG (303)
    REGISTER (304)
    RESTRICT (305)
    RETURN (306)
    SHORT (307)
    SIGNED (308)
    SIZEOF (309) 50
    STATIC (310)
    STRUCT (311)
    SWITCH (312)
    TYPEDEF (313)
    UNION (314)
    UNSIGNED (315)
    VOID (316)
    VOLATILE (317)
    WHILE (318)
    _BOOL (319)
    _COMPLEX (320)
    _IMAGINARY (321)
    FUNCTION_CALL (322)


Nonterminals, with rules where they appear

    $accept (90)
        on left: 0
    statement_sequence (91)
        on left: 1 2
        on right: 0 2
    statement (92)
        on left: 3
        on right: 1 2
    expr_list <node> (93)
        on left: 4 5 6
        on right: 3 6 23 54
    expr <node> (94)
        on left: 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
        on right: 5 6 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57


State 0

    0 $accept: • statement_sequence $end
    1 statement_sequence: • statement
    2                   | • statement_sequence statement
    3 statement: • expr_list ';'
    4 expr_list: ε •  [',', ';']
    5          | • expr
    6          | • expr_list ',' expr
    7 expr: • IDENT
    8     | • CHARLIT
    9     | • STRINGLIT
   10     | • NUMBERLIT
   11     | • '(' expr ')'
   12     | • expr '=' expr
   13     | • expr "+=" expr
   14     | • expr "-=" expr
   15     | • expr "*=" expr
   16     | • expr "/=" expr
   17     | • expr "%=" expr
   18     | • expr "<<=" expr
   19     | • expr ">>=" expr
   20     | • expr "&=" expr
   21     | • expr "^=" expr
   22     | • expr "|=" expr
   23     | • expr '?' expr_list ':' expr
   24     | • expr "&&" expr
   25     | • expr "||" expr
   26     | • expr '&' expr
   27     | • expr '^' expr
   28     | • expr '|' expr
   29     | • expr "==" expr
   30     | • expr "!=" expr
   31     | • expr '<' expr
   32     | • expr "<=" expr
   33     | • expr '>' expr
   34     | • expr ">=" expr
   35     | • expr "<<" expr
   36     | • expr ">>" expr
   37     | • expr '+' expr
   38     | • expr '-' expr
   39     | • expr '*' expr
   40     | • expr '/' expr
   41     | • expr '%' expr
   42     | • "++" expr
   43     | • "--" expr
   44     | • '+' expr
   45     | • '-' expr
   46     | • '!' expr
   47     | • '~' expr
   48     | • '*' expr
   49     | • '&' expr
   50     | • SIZEOF expr
   51     | • ALIGNOF expr
   52     | • expr "++"
   53     | • expr "--"
   54     | • expr '(' expr_list ')'
   55     | • expr '[' expr ']'
   56     | • expr '.' expr
   57     | • expr "->" expr

    IDENT      shift, and go to state 1
    CHARLIT    shift, and go to state 2
    STRINGLIT  shift, and go to state 3
    NUMBERLIT  shift, and go to state 4
    "++"       shift, and go to state 5
    "--"       shift, and go to state 6
    ALIGNOF    shift, and go to state 7
    SIZEOF     shift, and go to state 8
    '&'        shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    '!'        shift, and go to state 13
    '~'        shift, and go to state 14
    '('        shift, and go to state 15

    $default  reduce using rule 4 (expr_list)

    statement_sequence  go to state 16
    statement           go to state 17
    expr_list           go to state 18
    expr                go to state 19


State 1

    7 expr: IDENT •

    $default  reduce using rule 7 (expr)


State 2

    8 expr: CHARLIT •

    $default  reduce using rule 8 (expr)


State 3

    9 expr: STRINGLIT •

    $default  reduce using rule 9 (expr)


State 4

   10 expr: NUMBERLIT •

    $default  reduce using rule 10 (expr)


State 5

    7 expr: • IDENT
    8     | • CHARLIT
    9     | • STRINGLIT
   10     | • NUMBERLIT
   11     | • '(' expr ')'
   12     | • expr '=' expr
   13     | • expr "+=" expr
   14     | • expr "-=" expr
   15     | • expr "*=" expr
   16     | • expr "/=" expr
   17     | • expr "%=" expr
   18     | • expr "<<=" expr
   19     | • expr ">>=" expr
   20     | • expr "&=" expr
   21     | • expr "^=" expr
   22     | • expr "|=" expr
   23     | • expr '?' expr_list ':' expr
   24     | • expr "&&" expr
   25     | • expr "||" expr
   26     | • expr '&' expr
   27     | • expr '^' expr
   28     | • expr '|' expr
   29     | • expr "==" expr
   30     | • expr "!=" expr
   31     | • expr '<' expr
   32     | • expr "<=" expr
   33     | • expr '>' expr
   34     | • expr ">=" expr
   35     | • expr "<<" expr
   36     | • expr ">>" expr
   37     | • expr '+' expr
   38     | • expr '-' expr
   39     | • expr '*' expr
   40     | • expr '/' expr
   41     | • expr '%' expr
   42     | • "++" expr
   42     | "++" • expr
   43     | • "--" expr
   44     | • '+' expr
   45     | • '-' expr
   46     | • '!' expr
   47     | • '~' expr
   48     | • '*' expr
   49     | • '&' expr
   50     | • SIZEOF expr
   51     | • ALIGNOF expr
   52     | • expr "++"
   53     | • expr "--"
   54     | • expr '(' expr_list ')'
   55     | • expr '[' expr ']'
   56     | • expr '.' expr
   57     | • expr "->" expr

    IDENT      shift, and go to state 1
    CHARLIT    shift, and go to state 2
    STRINGLIT  shift, and go to state 3
    NUMBERLIT  shift, and go to state 4
    "++"       shift, and go to state 5
    "--"       shift, and go to state 6
    ALIGNOF    shift, and go to state 7
    SIZEOF     shift, and go to state 8
    '&'        shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    '!'        shift, and go to state 13
    '~'        shift, and go to state 14
    '('        shift, and go to state 15

    expr  go to state 20


State 6

    7 expr: • IDENT
    8     | • CHARLIT
    9     | • STRINGLIT
   10     | • NUMBERLIT
   11     | • '(' expr ')'
   12     | • expr '=' expr
   13     | • expr "+=" expr
   14     | • expr "-=" expr
   15     | • expr "*=" expr
   16     | • expr "/=" expr
   17     | • expr "%=" expr
   18     | • expr "<<=" expr
   19     | • expr ">>=" expr
   20     | • expr "&=" expr
   21     | • expr "^=" expr
   22     | • expr "|=" expr
   23     | • expr '?' expr_list ':' expr
   24     | • expr "&&" expr
   25     | • expr "||" expr
   26     | • expr '&' expr
   27     | • expr '^' expr
   28     | • expr '|' expr
   29     | • expr "==" expr
   30     | • expr "!=" expr
   31     | • expr '<' expr
   32     | • expr "<=" expr
   33     | • expr '>' expr
   34     | • expr ">=" expr
   35     | • expr "<<" expr
   36     | • expr ">>" expr
   37     | • expr '+' expr
   38     | • expr '-' expr
   39     | • expr '*' expr
   40     | • expr '/' expr
   41     | • expr '%' expr
   42     | • "++" expr
   43     | • "--" expr
   43     | "--" • expr
   44     | • '+' expr
   45     | • '-' expr
   46     | • '!' expr
   47     | • '~' expr
   48     | • '*' expr
   49     | • '&' expr
   50     | • SIZEOF expr
   51     | • ALIGNOF expr
   52     | • expr "++"
   53     | • expr "--"
   54     | • expr '(' expr_list ')'
   55     | • expr '[' expr ']'
   56     | • expr '.' expr
   57     | • expr "->" expr

    IDENT      shift, and go to state 1
    CHARLIT    shift, and go to state 2
    STRINGLIT  shift, and go to state 3
    NUMBERLIT  shift, and go to state 4
    "++"       shift, and go to state 5
    "--"       shift, and go to state 6
    ALIGNOF    shift, and go to state 7
    SIZEOF     shift, and go to state 8
    '&'        shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    '!'        shift, and go to state 13
    '~'        shift, and go to state 14
    '('        shift, and go to state 15

    expr  go to state 21


State 7

    7 expr: • IDENT
    8     | • CHARLIT
    9     | • STRINGLIT
   10     | • NUMBERLIT
   11     | • '(' expr ')'
   12     | • expr '=' expr
   13     | • expr "+=" expr
   14     | • expr "-=" expr
   15     | • expr "*=" expr
   16     | • expr "/=" expr
   17     | • expr "%=" expr
   18     | • expr "<<=" expr
   19     | • expr ">>=" expr
   20     | • expr "&=" expr
   21     | • expr "^=" expr
   22     | • expr "|=" expr
   23     | • expr '?' expr_list ':' expr
   24     | • expr "&&" expr
   25     | • expr "||" expr
   26     | • expr '&' expr
   27     | • expr '^' expr
   28     | • expr '|' expr
   29     | • expr "==" expr
   30     | • expr "!=" expr
   31     | • expr '<' expr
   32     | • expr "<=" expr
   33     | • expr '>' expr
   34     | • expr ">=" expr
   35     | • expr "<<" expr
   36     | • expr ">>" expr
   37     | • expr '+' expr
   38     | • expr '-' expr
   39     | • expr '*' expr
   40     | • expr '/' expr
   41     | • expr '%' expr
   42     | • "++" expr
   43     | • "--" expr
   44     | • '+' expr
   45     | • '-' expr
   46     | • '!' expr
   47     | • '~' expr
   48     | • '*' expr
   49     | • '&' expr
   50     | • SIZEOF expr
   51     | • ALIGNOF expr
   51     | ALIGNOF • expr
   52     | • expr "++"
   53     | • expr "--"
   54     | • expr '(' expr_list ')'
   55     | • expr '[' expr ']'
   56     | • expr '.' expr
   57     | • expr "->" expr

    IDENT      shift, and go to state 1
    CHARLIT    shift, and go to state 2
    STRINGLIT  shift, and go to state 3
    NUMBERLIT  shift, and go to state 4
    "++"       shift, and go to state 5
    "--"       shift, and go to state 6
    ALIGNOF    shift, and go to state 7
    SIZEOF     shift, and go to state 8
    '&'        shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    '!'        shift, and go to state 13
    '~'        shift, and go to state 14
    '('        shift, and go to state 15

    expr  go to state 22


State 8

    7 expr: • IDENT
    8     | • CHARLIT
    9     | • STRINGLIT
   10     | • NUMBERLIT
   11     | • '(' expr ')'
   12     | • expr '=' expr
   13     | • expr "+=" expr
   14     | • expr "-=" expr
   15     | • expr "*=" expr
   16     | • expr "/=" expr
   17     | • expr "%=" expr
   18     | • expr "<<=" expr
   19     | • expr ">>=" expr
   20     | • expr "&=" expr
   21     | • expr "^=" expr
   22     | • expr "|=" expr
   23     | • expr '?' expr_list ':' expr
   24     | • expr "&&" expr
   25     | • expr "||" expr
   26     | • expr '&' expr
   27     | • expr '^' expr
   28     | • expr '|' expr
   29     | • expr "==" expr
   30     | • expr "!=" expr
   31     | • expr '<' expr
   32     | • expr "<=" expr
   33     | • expr '>' expr
   34     | • expr ">=" expr
   35     | • expr "<<" expr
   36     | • expr ">>" expr
   37     | • expr '+' expr
   38     | • expr '-' expr
   39     | • expr '*' expr
   40     | • expr '/' expr
   41     | • expr '%' expr
   42     | • "++" expr
   43     | • "--" expr
   44     | • '+' expr
   45     | • '-' expr
   46     | • '!' expr
   47     | • '~' expr
   48     | • '*' expr
   49     | • '&' expr
   50     | • SIZEOF expr
   50     | SIZEOF • expr
   51     | • ALIGNOF expr
   52     | • expr "++"
   53     | • expr "--"
   54     | • expr '(' expr_list ')'
   55     | • expr '[' expr ']'
   56     | • expr '.' expr
   57     | • expr "->" expr

    IDENT      shift, and go to state 1
    CHARLIT    shift, and go to state 2
    STRINGLIT  shift, and go to state 3
    NUMBERLIT  shift, and go to state 4
    "++"       shift, and go to state 5
    "--"       shift, and go to state 6
    ALIGNOF    shift, and go to state 7
    SIZEOF     shift, and go to state 8
    '&'        shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    '!'        shift, and go to state 13
    '~'        shift, and go to state 14
    '('        shift, and go to state 15

    expr  go to state 23


State 9

    7 expr: • IDENT
    8     | • CHARLIT
    9     | • STRINGLIT
   10     | • NUMBERLIT
   11     | • '(' expr ')'
   12     | • expr '=' expr
   13     | • expr "+=" expr
   14     | • expr "-=" expr
   15     | • expr "*=" expr
   16     | • expr "/=" expr
   17     | • expr "%=" expr
   18     | • expr "<<=" expr
   19     | • expr ">>=" expr
   20     | • expr "&=" expr
   21     | • expr "^=" expr
   22     | • expr "|=" expr
   23     | • expr '?' expr_list ':' expr
   24     | • expr "&&" expr
   25     | • expr "||" expr
   26     | • expr '&' expr
   27     | • expr '^' expr
   28     | • expr '|' expr
   29     | • expr "==" expr
   30     | • expr "!=" expr
   31     | • expr '<' expr
   32     | • expr "<=" expr
   33     | • expr '>' expr
   34     | • expr ">=" expr
   35     | • expr "<<" expr
   36     | • expr ">>" expr
   37     | • expr '+' expr
   38     | • expr '-' expr
   39     | • expr '*' expr
   40     | • expr '/' expr
   41     | • expr '%' expr
   42     | • "++" expr
   43     | • "--" expr
   44     | • '+' expr
   45     | • '-' expr
   46     | • '!' expr
   47     | • '~' expr
   48     | • '*' expr
   49     | • '&' expr
   49     | '&' • expr
   50     | • SIZEOF expr
   51     | • ALIGNOF expr
   52     | • expr "++"
   53     | • expr "--"
   54     | • expr '(' expr_list ')'
   55     | • expr '[' expr ']'
   56     | • expr '.' expr
   57     | • expr "->" expr

    IDENT      shift, and go to state 1
    CHARLIT    shift, and go to state 2
    STRINGLIT  shift, and go to state 3
    NUMBERLIT  shift, and go to state 4
    "++"       shift, and go to state 5
    "--"       shift, and go to state 6
    ALIGNOF    shift, and go to state 7
    SIZEOF     shift, and go to state 8
    '&'        shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    '!'        shift, and go to state 13
    '~'        shift, and go to state 14
    '('        shift, and go to state 15

    expr  go to state 24


State 10

    7 expr: • IDENT
    8     | • CHARLIT
    9     | • STRINGLIT
   10     | • NUMBERLIT
   11     | • '(' expr ')'
   12     | • expr '=' expr
   13     | • expr "+=" expr
   14     | • expr "-=" expr
   15     | • expr "*=" expr
   16     | • expr "/=" expr
   17     | • expr "%=" expr
   18     | • expr "<<=" expr
   19     | • expr ">>=" expr
   20     | • expr "&=" expr
   21     | • expr "^=" expr
   22     | • expr "|=" expr
   23     | • expr '?' expr_list ':' expr
   24     | • expr "&&" expr
   25     | • expr "||" expr
   26     | • expr '&' expr
   27     | • expr '^' expr
   28     | • expr '|' expr
   29     | • expr "==" expr
   30     | • expr "!=" expr
   31     | • expr '<' expr
   32     | • expr "<=" expr
   33     | • expr '>' expr
   34     | • expr ">=" expr
   35     | • expr "<<" expr
   36     | • expr ">>" expr
   37     | • expr '+' expr
   38     | • expr '-' expr
   39     | • expr '*' expr
   40     | • expr '/' expr
   41     | • expr '%' expr
   42     | • "++" expr
   43     | • "--" expr
   44     | • '+' expr
   44     | '+' • expr
   45     | • '-' expr
   46     | • '!' expr
   47     | • '~' expr
   48     | • '*' expr
   49     | • '&' expr
   50     | • SIZEOF expr
   51     | • ALIGNOF expr
   52     | • expr "++"
   53     | • expr "--"
   54     | • expr '(' expr_list ')'
   55     | • expr '[' expr ']'
   56     | • expr '.' expr
   57     | • expr "->" expr

    IDENT      shift, and go to state 1
    CHARLIT    shift, and go to state 2
    STRINGLIT  shift, and go to state 3
    NUMBERLIT  shift, and go to state 4
    "++"       shift, and go to state 5
    "--"       shift, and go to state 6
    ALIGNOF    shift, and go to state 7
    SIZEOF     shift, and go to state 8
    '&'        shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    '!'        shift, and go to state 13
    '~'        shift, and go to state 14
    '('        shift, and go to state 15

    expr  go to state 25


State 11

    7 expr: • IDENT
    8     | • CHARLIT
    9     | • STRINGLIT
   10     | • NUMBERLIT
   11     | • '(' expr ')'
   12     | • expr '=' expr
   13     | • expr "+=" expr
   14     | • expr "-=" expr
   15     | • expr "*=" expr
   16     | • expr "/=" expr
   17     | • expr "%=" expr
   18     | • expr "<<=" expr
   19     | • expr ">>=" expr
   20     | • expr "&=" expr
   21     | • expr "^=" expr
   22     | • expr "|=" expr
   23     | • expr '?' expr_list ':' expr
   24     | • expr "&&" expr
   25     | • expr "||" expr
   26     | • expr '&' expr
   27     | • expr '^' expr
   28     | • expr '|' expr
   29     | • expr "==" expr
   30     | • expr "!=" expr
   31     | • expr '<' expr
   32     | • expr "<=" expr
   33     | • expr '>' expr
   34     | • expr ">=" expr
   35     | • expr "<<" expr
   36     | • expr ">>" expr
   37     | • expr '+' expr
   38     | • expr '-' expr
   39     | • expr '*' expr
   40     | • expr '/' expr
   41     | • expr '%' expr
   42     | • "++" expr
   43     | • "--" expr
   44     | • '+' expr
   45     | • '-' expr
   45     | '-' • expr
   46     | • '!' expr
   47     | • '~' expr
   48     | • '*' expr
   49     | • '&' expr
   50     | • SIZEOF expr
   51     | • ALIGNOF expr
   52     | • expr "++"
   53     | • expr "--"
   54     | • expr '(' expr_list ')'
   55     | • expr '[' expr ']'
   56     | • expr '.' expr
   57     | • expr "->" expr

    IDENT      shift, and go to state 1
    CHARLIT    shift, and go to state 2
    STRINGLIT  shift, and go to state 3
    NUMBERLIT  shift, and go to state 4
    "++"       shift, and go to state 5
    "--"       shift, and go to state 6
    ALIGNOF    shift, and go to state 7
    SIZEOF     shift, and go to state 8
    '&'        shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    '!'        shift, and go to state 13
    '~'        shift, and go to state 14
    '('        shift, and go to state 15

    expr  go to state 26


State 12

    7 expr: • IDENT
    8     | • CHARLIT
    9     | • STRINGLIT
   10     | • NUMBERLIT
   11     | • '(' expr ')'
   12     | • expr '=' expr
   13     | • expr "+=" expr
   14     | • expr "-=" expr
   15     | • expr "*=" expr
   16     | • expr "/=" expr
   17     | • expr "%=" expr
   18     | • expr "<<=" expr
   19     | • expr ">>=" expr
   20     | • expr "&=" expr
   21     | • expr "^=" expr
   22     | • expr "|=" expr
   23     | • expr '?' expr_list ':' expr
   24     | • expr "&&" expr
   25     | • expr "||" expr
   26     | • expr '&' expr
   27     | • expr '^' expr
   28     | • expr '|' expr
   29     | • expr "==" expr
   30     | • expr "!=" expr
   31     | • expr '<' expr
   32     | • expr "<=" expr
   33     | • expr '>' expr
   34     | • expr ">=" expr
   35     | • expr "<<" expr
   36     | • expr ">>" expr
   37     | • expr '+' expr
   38     | • expr '-' expr
   39     | • expr '*' expr
   40     | • expr '/' expr
   41     | • expr '%' expr
   42     | • "++" expr
   43     | • "--" expr
   44     | • '+' expr
   45     | • '-' expr
   46     | • '!' expr
   47     | • '~' expr
   48     | • '*' expr
   48     | '*' • expr
   49     | • '&' expr
   50     | • SIZEOF expr
   51     | • ALIGNOF expr
   52     | • expr "++"
   53     | • expr "--"
   54     | • expr '(' expr_list ')'
   55     | • expr '[' expr ']'
   56     | • expr '.' expr
   57     | • expr "->" expr

    IDENT      shift, and go to state 1
    CHARLIT    shift, and go to state 2
    STRINGLIT  shift, and go to state 3
    NUMBERLIT  shift, and go to state 4
    "++"       shift, and go to state 5
    "--"       shift, and go to state 6
    ALIGNOF    shift, and go to state 7
    SIZEOF     shift, and go to state 8
    '&'        shift, and go to state 9
    '+'        shift, and go to state 10
    '-'        shift, and go to state 11
    '*'        shift, and go to state 12
    '!'        shift, and go to state 13
    '~'        shift, and go to state 14
    '('        shift, and go to state 15

    expr  go to state 27


State 13
